* 2013-04-22 - thorben.betten@open-xchange.com

 - Fix for bug 26028: Indicate proper file name for single multipart-part
 - Fix for bug 26065: Check if MP3 file provides proper ID2v2 tag

* 2013-04-20 - thorben.betten@open-xchange.com

 - Fix for bug 26057: Honor optional URL parameter "timezone"

* 2013-04-19 - marcus.klein@open-xchange.com

 - Fix for bug 26036: Added required service to needed services list of RSS bundle activator.

* 2013-04-18 - martin.herfurth@open-xchange.com

 - Fix for bug 26015: Added missing missing timezone for halo calls.

* 2013-04-18 - marc.arens@open-xchange.com

 - Fix for bug 25842: Use com.openexchange.servlet.maxBodySize for parameters transported via PUT/POST body

* 2013-04-18 - thorben.betten@open-xchange.com

 - Fix for bug 26003: Deal with possibly unknown MIME type when determining file extension
 - Fix for bug 25981: Added capability for RSS

* 2013-04-17 - marcus.klein@open-xchange.com

 - Fix for bug 25911: Package com.openexchange.audit component for tracking user actions.

* 2013-04-17 - martin.herfurth@open-xchange.com

 - Fix for bug 25952: Added missing change and delete exception field to get request for appointments.

* 2013-04-17 - thorben.betten@open-xchange.com

 - Fix for bug 25939: Moved snippet bundles to core package
 - Fix for bug 25942: Check object's type before casting to Multipart
 - Fix for bug 25957: Deny "vbscript" URLs

* 2013-04-16 - thorben.betten@open-xchange.com

 - Fix for bug 25909: Proper initialization of service trackers although registering contact-collect service is disabled
 - Fix for bug 25921: Added several null guards
 - Fix for bug 25894: Proper formatting for JSON runtime statistics
 - Fix for bug 25923: Fixed possible StringIndexOutOfBoundsException when parsing message content

* 2013-04-15 - marc.arens@open-xchange.com

 - Fix for bug 25863: Move ArrayList.clear() to beginning of runloop and add logging in case of error

* 2013-04-15 - martin.herfurth@open-xchange.com
